kubernetes/overlays/homelab/open-webui/generated/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: open-webui
  namespace: open-webui

spec:
  parentRefs:
    - name: traefik
      namespace: traefik
      sectionName: websecure
  hostnames:
    - chat.knlim.dev
    - open-webui.knlim.dev
  rules:
    - backendRefs:
        - name: open-webui
          port: 80
